(chore) fix text alignment on homescreen buttons

--- a/src/app/user/home/home.component.css
+++ b/src/app/user/home/home.component.css
@@ -14,6 +14,7 @@
 .section-text {
   height: 2vh; 
   padding-bottom: 2em;
+  width: 100%;
 }
 
 main {
